<resources>
    <string name="app_name">Practica2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_empty_list_msg">The app list is empty :(</string>
    <string name="activity_edit_input_label_name">App\'s name</string>
    <string name="activity_edit_input_label_desc">Description</string>
    <string name="activity_edit_check_label_updated">Updated?</string>
    <string name="activity_edit_btn_label_edit">Install</string>
    <string name="activity_edit_input_label_dev">Developer</string>
    <string name="activity_edit_message_empty_name">The app name can\'t be empty</string>
    <string name="activity_edit_message_empty_desc">The app description can\'t be empty</string>
    <string name="activity_edit_message_empty_dev">The app developer name can\'t be empty</string>
    <string name="activity_edit_message_app_installed">Installing application...</string>
    <string name="activity_edit_message_random_image">Random image: </string>
    <string name="activity_edit_message_app_not_installed">App not installed, duplicated app name.</string>
    <string name="row_list_app_status">Status: </string>
    <string name="row_list_app_dev">Developer: </string>
    <string name="activity_edit_input_label_status">Status</string>
    <string name="activity_detal_btn_label_update">Update</string>
    <string name="activity_detail_btn_label_uninstall">Uninstall</string>
    <string name="activity_detail_message_noApp_info">Could\'t load app information detail :(</string>
    <string name="activity_edit_btn_label_change">Edit</string>
    <string name="activity_edit_message_app_edited">The app was edited!</string>
    <string name="activity_edit_message_app_not_edited">The app was not edited!</string>
    <string name="activity_detal_btn_label_open">Open</string>
    <string name="activity_detail_mesagge_desinstalled">Desinstalled!</string>
    <string name="activity_detail_uninstall_title">Uninstall App</string>
    <string name="activity_detail_uninstall_message">Would you like to desintall the app: \"%s\" ?</string>
    <string name="service_uninstall_label_title">Uninstalling App</string>
    <string name="service_uninstall_label_content">Uninstalling the app: \"%s\"</string>
    <string name="service_uninstall_label_title_completed">App uninstalled</string>
    <string name="service_uninstall_label_completed">The app \"%s\" was successfully uninstalled</string>
    <string name="service_update_label_title">Updating App</string>
    <string name="service_update_label_content">Updating the app: \"%s\"</string>
    <string name="service_update_label_completed">The app \"%s\" was successfully updated</string>
    <string name="service_update_label_title_completed">App updated!</string>
</resources>
