<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    tools:context="modulo4.ddam.markmota.tk.practica2.EditActivity">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/activity_edit_message_random_image"
                />
            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/activity_edit_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_dialog_info"
                />
            <EditText
                android:id="@+id/activity_edit_name"
                android:hint="@string/activity_edit_input_label_name"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/activity_edit_dev"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_edit_input_label_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/activity_edit_desc"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_edit_input_label_desc"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_marginTop="16dp"
                android:id="@+id/activity_edit_updated" android:text="@string/activity_edit_check_label_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="1"
                    android:textAllCaps="false" android:text="@string/activity_edit_btn_label_edit"
                    android:id="@+id/activity_edit_btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>


    </LinearLayout>


</LinearLayout>
