<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="modulo4.ddam.markmota.tk.practica2.EditActivity">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".6">
            <TextView
                android:id="@+id/activity_detail_msg_desinstalled"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_detail_mesagge_desinstalled"
                android:textAlignment="center"
                android:textSize="20dp"
                android:background="@color/colorGreen"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:padding="5dp"
                android:visibility="gone"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/activity_edit_message_random_image"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/activity_detail_img_loader"
                    android:indeterminate="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/margin_l"
                    android:visibility="gone"
                    />
                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/activity_detail_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@android:drawable/ic_dialog_info"
                    android:visibility="gone"/>

            </LinearLayout>

            <TextView
                android:id="@+id/activity_detail_name_header"
                android:text="@string/activity_edit_input_label_name"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
s
            <TextView
                android:id="@+id/activity_detail_name"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/activity_detail_dev_header"
                android:layout_marginTop="5dp"
                android:text="@string/activity_edit_input_label_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_detail_dev"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/activity_detail_desc_header"
                android:layout_marginTop="5dp"
                android:text="@string/activity_edit_input_label_desc"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/activity_detail_desc"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/activity_detail_status_header"
                android:layout_marginTop="5dp" android:text="@string/activity_edit_input_label_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/activity_detail_status"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <LinearLayout
                android:id="@+id/activity_detail_btn_layout"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:textAllCaps="false" android:text="@string/activity_detal_btn_label_open"
                    android:id="@+id/activity_detail_btn_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:layout_weight="1"
                    android:textAllCaps="false" android:text="@string/activity_detal_btn_label_update"
                    android:id="@+id/activity_detail_btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="1"
                    android:textAllCaps="false" android:text="@string/activity_detail_btn_label_uninstall"
                    android:id="@+id/activity_detail_btn_uninstall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>


    </LinearLayout>


</LinearLayout>
